Add: Judge training

--- a/ml/notebooks/train_auditor.ipynb
+++ b/ml/notebooks/train_auditor.ipynb
@@ -41,15 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "aeeb49de",
       "metadata": {
         "id": "aeeb49de"
       },
       "outputs": [],
       "source": [
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "\n",
         "RISK_LABELS = [\"scam\", \"adult\", \"illegal\", \"spam\", \"low_info\"]\n",
         "\n",
         "\n",
@@ -156,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "5776b1ce",
       "metadata": {
         "id": "5776b1ce"
@@ -164,18 +162,20 @@
       "outputs": [],
       "source": [
         "def train_auditor(dataset, encoder_name: str):\n",
+        "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
         "    model = AuditorModel(encoder_name).to(device)\n",
         "    optimizer = torch.optim.AdamW(model.parameters(), lr=2e-5, weight_decay=0.01)\n",
-        "\n",
         "    bce = torch.nn.BCELoss()\n",
         "    mse = torch.nn.MSELoss()\n",
+        "    epochs = 10\n",
         "\n",
         "    loader = DataLoader(dataset, batch_size=32, shuffle=True)\n",
         "\n",
         "    model.train()\n",
-        "    for epoch in range(10):\n",
+        "    for epoch in range(epochs):\n",
         "        epoch_loss = 0\n",
-        "        loop = tqdm.tqdm(loader, desc=f\"Epoch {epoch}\")\n",
+        "        loop = tqdm.tqdm(loader, desc=f\"Epoch {epoch + 1} / {epochs}\")\n",
         "        for batch in loop:\n",
         "            batch = {k: v.to(device) for k, v in batch.items()}\n",
         "\n",
@@ -196,7 +196,7 @@
         "            epoch_loss += loss.item()\n",
         "            loop.set_postfix(loss=loss.item())\n",
         "\n",
-        "        print(f\"Epoch {epoch}: loss={epoch_loss / len(loader):.4f}\")\n",
+        "        print(f\"Epoch {epoch + 1}: loss={epoch_loss / len(loader):.4f}\")\n",
         "\n",
         "    return model"
       ]
@@ -294,141 +294,141 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 0: 100%|██████████| 157/157 [01:44<00:00,  1.50it/s, loss=0.0919]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 0: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 1: 100%|██████████| 157/157 [01:48<00:00,  1.45it/s, loss=0.0524]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 2: 100%|██████████| 157/157 [01:47<00:00,  1.45it/s, loss=0.0258]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 2: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 3: 100%|██████████| 157/157 [01:47<00:00,  1.45it/s, loss=0.0183]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 3: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 4: 100%|██████████| 157/157 [01:47<00:00,  1.45it/s, loss=0.00879]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 4: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 5: 100%|██████████| 157/157 [01:47<00:00,  1.45it/s, loss=0.0129]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 5: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 6: 100%|██████████| 157/157 [01:48<00:00,  1.45it/s, loss=0.0063]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 6: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 7: 100%|██████████| 157/157 [01:47<00:00,  1.45it/s, loss=0.00717]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 7: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 8: 100%|██████████| 157/157 [01:48<00:00,  1.45it/s, loss=0.00214]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 8: loss=0.0000\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Epoch 9: 100%|██████████| 157/157 [01:48<00:00,  1.45it/s, loss=0.00238]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 9: loss=0.0000\n"
           ]
@@ -462,18 +462,18 @@
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
-    "accelerator": "GPU"
+    "language_info": {
+      "name": "python"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
