--- a/ml/notebooks/train_auditor.ipynb
+++ b/ml/notebooks/train_auditor.ipynb
@@ -7,7 +7,7 @@
         "id": "d01be08c"
       },
       "source": [
-        "## Import libraries"
+        "## Libraries"
       ]
     },
     {
@@ -66,7 +66,7 @@
         "        self.label_head = nn.Linear(hidden_dim, len(RISK_LABELS))\n",
         "        self.score_head = nn.Linear(hidden_dim, 1)\n",
         "\n",
-        "    def forward(self, input_ids, attention_mask):\n",
+        "    def forward(self, input_ids=None, attention_mask=None, **kwargs):\n",
         "        out = self.encoder(\n",
         "            input_ids=input_ids,\n",
         "            attention_mask=attention_mask,\n",
@@ -175,7 +175,7 @@
         "    model.train()\n",
         "    for epoch in range(epochs):\n",
         "        epoch_loss = 0\n",
-        "        loop = tqdm.tqdm(loader, desc=f\"Epoch {epoch + 1} / {epochs}\")\n",
+        "        loop = tqdm.tqdm(loader, desc=f\"Epoch {epoch + 1}\")\n",
         "        for batch in loop:\n",
         "            batch = {k: v.to(device) for k, v in batch.items()}\n",
         "\n",
@@ -283,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "b7bf0826",
       "metadata": {
         "colab": {
@@ -435,7 +435,7 @@
         }
       ],
       "source": [
-        "ENCODER = \"distilbert-base-multilingual-cased\"\n",
+        "ENCODER = \"sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2\"\n",
         "\n",
         "tokenizer = AutoTokenizer.from_pretrained(ENCODER)\n",
         "\n",
