--- a/ml/notebooks/train_judge.ipynb
+++ b/ml/notebooks/train_judge.ipynb
@@ -16,7 +16,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import random\n",
     "import tqdm\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -110,25 +109,73 @@
    "outputs": [],
    "source": [
     "VERDICTS = {\"publish\": 0, \"revise\": 1, \"reject\": 2}\n",
+    "RISK_LABELS = [\"scam\", \"adult\", \"illegal\", \"spam\", \"low_info\"]\n",
     "\n",
-    "def generate_judge_sample():\n",
-    "    risk = random.random()\n",
-    "    uncertainty = random.random() * 0.3\n",
-    "    quality = random.random()\n",
     "\n",
-    "    aspects = [random.uniform(0.3, 1.0) for _ in range(4)]\n",
-    "\n",
+    "def build_judge_features(auditor, quality, meta=None):\n",
     "    features = [\n",
-    "        risk,\n",
-    "        uncertainty,\n",
-    "        quality,\n",
-    "        1 - np.std(aspects),\n",
-    "        *aspects\n",
+    "        auditor[\"risk_score\"],\n",
+    "        auditor.get(\"uncertainty\", 0.0),\n",
+    "        quality[\"quality_score\"],\n",
+    "        quality.get(\"confidence\", 1.0),\n",
     "    ]\n",
     "\n",
-    "    if risk > 0.7:\n",
+    "    # Quality aspects\n",
+    "    for k in [\"informativeness\", \"clarity\", \"completeness\", \"persuasion\"]:\n",
+    "        features.append(quality[\"aspects\"].get(k, 0.0))\n",
+    "\n",
+    "    # Optional meta-features\n",
+    "    if meta:\n",
+    "        features.append(meta.get(\"text_length\", 0) / 1000)\n",
+    "        features.append(meta.get(\"embedding_norm\", 0.0))\n",
+    "\n",
+    "    return np.array(features, dtype=\"float32\")\n",
+    "\n",
+    "\n",
+    "def generate_fake_auditor():\n",
+    "    risk = np.random.beta(2, 5)\n",
+    "    label_probs = np.random.dirichlet(np.ones(len(RISK_LABELS)))\n",
+    "    entropy = -(label_probs * np.log(label_probs + 1e-8)).sum()\n",
+    "\n",
+    "    return {\n",
+    "        \"risk_score\": float(risk),\n",
+    "        \"risk_labels\": dict(zip(RISK_LABELS, label_probs)),\n",
+    "        \"uncertainty\": float(entropy)\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def generate_fake_quality():\n",
+    "    aspects = {\n",
+    "        \"informativeness\": np.random.uniform(0.2, 1.0),\n",
+    "        \"clarity\": np.random.uniform(0.2, 1.0),\n",
+    "        \"completeness\": np.random.uniform(0.2, 1.0),\n",
+    "        \"persuasion\": np.random.uniform(0.2, 1.0),\n",
+    "    }\n",
+    "\n",
+    "    quality = np.mean(list(aspects.values()))\n",
+    "    confidence = 1 - np.std(list(aspects.values()))\n",
+    "\n",
+    "    return {\n",
+    "        \"quality_score\": float(quality),\n",
+    "        \"aspects\": aspects,\n",
+    "        \"confidence\": float(confidence)\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def generate_judge_sample():\n",
+    "    auditor = generate_fake_auditor()\n",
+    "    quality = generate_fake_quality()\n",
+    "\n",
+    "    meta = {\n",
+    "        \"text_length\": np.random.randint(20, 2000),\n",
+    "        \"embedding_norm\": np.random.uniform(5, 15)\n",
+    "    }\n",
+    "\n",
+    "    features = build_judge_features(auditor, quality, meta)\n",
+    "\n",
+    "    if auditor[\"risk_score\"] > 0.7:\n",
     "        label = VERDICTS[\"reject\"]\n",
-    "    elif risk < 0.3 and quality > 0.7:\n",
+    "    elif quality[\"quality_score\"] > 0.75 and auditor[\"risk_score\"] < 0.3:\n",
     "        label = VERDICTS[\"publish\"]\n",
     "    else:\n",
     "        label = VERDICTS[\"revise\"]\n",
@@ -155,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "15c8b8d5",
    "metadata": {},
    "outputs": [],
@@ -203,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4f5b73e5",
    "metadata": {},
    "outputs": [
@@ -211,142 +258,142 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z9/19wy68_x711cm327qjf79_pc0000gn/T/ipykernel_1243/3878342614.py:3: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_new.cpp:256.)\n",
+      "/var/folders/z9/19wy68_x711cm327qjf79_pc0000gn/T/ipykernel_17170/3878342614.py:3: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_new.cpp:256.)\n",
       "  self.X = torch.tensor(X)\n",
-      "Epoch 1: 100%|██████████| 157/157 [00:00<00:00, 406.24it/s, loss=0.382]\n"
+      "Epoch 1: 100%|██████████| 157/157 [00:00<00:00, 502.09it/s, loss=0.099]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: loss=0.6849\n"
+      "Epoch 1: loss=0.3266\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2: 100%|██████████| 157/157 [00:00<00:00, 931.93it/s, loss=0.167]\n"
+      "Epoch 2: 100%|██████████| 157/157 [00:00<00:00, 884.62it/s, loss=0.0754]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2: loss=0.2959\n"
+      "Epoch 2: loss=0.2685\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3: 100%|██████████| 157/157 [00:00<00:00, 958.50it/s, loss=0.0966]\n"
+      "Epoch 3: 100%|██████████| 157/157 [00:00<00:00, 864.62it/s, loss=0.0639]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3: loss=0.2133\n"
+      "Epoch 3: loss=0.2489\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4: 100%|██████████| 157/157 [00:00<00:00, 927.12it/s, loss=0.174]\n"
+      "Epoch 4: 100%|██████████| 157/157 [00:00<00:00, 866.10it/s, loss=0.106]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4: loss=0.1845\n"
+      "Epoch 4: loss=0.2130\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 5: 100%|██████████| 157/157 [00:00<00:00, 873.27it/s, loss=0.0926]\n"
+      "Epoch 5: 100%|██████████| 157/157 [00:00<00:00, 890.40it/s, loss=0.107]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5: loss=0.1672\n"
+      "Epoch 5: loss=0.1831\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 6: 100%|██████████| 157/157 [00:00<00:00, 554.16it/s, loss=0.271] \n"
+      "Epoch 6: 100%|██████████| 157/157 [00:00<00:00, 812.49it/s, loss=0.0213]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 6: loss=0.1545\n"
+      "Epoch 6: loss=0.1552\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 7: 100%|██████████| 157/157 [00:00<00:00, 732.67it/s, loss=0.189] \n"
+      "Epoch 7: 100%|██████████| 157/157 [00:00<00:00, 745.63it/s, loss=0.235] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 7: loss=0.1452\n"
+      "Epoch 7: loss=0.1383\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 8: 100%|██████████| 157/157 [00:00<00:00, 937.12it/s, loss=0.0372]\n"
+      "Epoch 8: 100%|██████████| 157/157 [00:00<00:00, 912.67it/s, loss=0.0583]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 8: loss=0.1357\n"
+      "Epoch 8: loss=0.1239\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9: 100%|██████████| 157/157 [00:00<00:00, 910.22it/s, loss=0.131]\n"
+      "Epoch 9: 100%|██████████| 157/157 [00:00<00:00, 909.05it/s, loss=0.28] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9: loss=0.1287\n"
+      "Epoch 9: loss=0.1222\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 10: 100%|██████████| 157/157 [00:00<00:00, 561.94it/s, loss=0.292]\n"
+      "Epoch 10: 100%|██████████| 157/157 [00:00<00:00, 911.67it/s, loss=0.0651]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10: loss=0.1325\n"
+      "Epoch 10: loss=0.1113\n"
      ]
     }
    ],
